--- a/mutt.yml
+++ b/mutt.yml
@@ -1,1 +1,12 @@
-name 
+- name: mutt | Установка и конфигурирование mutt
+  hosts: nginx
+  become: true
+
+  tasks:
+    - name: update
+      apt:
+        update_cache=yes
+    - name: mutt | Установка mutt
+      apt:
+        name: mutt
+        state: latest
